# ndx-fiber-photometry

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  NEXTSTEPS.md  README.md  pyproject.toml  requirements-dev.txt  requirements-min.txt
.github/workflows/: auto-publish.yaml  auto-publish.yml  run_all_tests.yml  run_coverage.yml  update-version.yml  validate_schema.yml
docs/source/: conf.py  conf_doc_autogen.py  format.rst  index.rst
notebooks/: example.ipynb  metadata_example.yaml
spec/: ndx-fiber-photometry.extensions.yaml  ndx-fiber-photometry.namespace.yaml
src/pynwb/ndx_fiber_photometry/: __init__.py  fiber_photometry.py
src/pynwb/ndx_fiber_photometry/widgets/: __init__.py  tetrode_series_widget.py
src/pynwb/tests/: test_tetrodeseries.py
src/pynwb/tests/integration/: test_fiber_photometry.py  test_readme.py
src/spec/: create_extension_spec.py
